--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.14.0",
     "@tailwindcss/vite": "^4.1.5",
     "framer-motion": "^12.16.0",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
